# berserk_downloader

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: qa.yaml
berserk_downloader/: __init__.py  __main__.py  chapter.py  constance.py  image.py  main.py
tests/: __init__.py  test_chapter.py  test_image.py  test_main.py
tests/local_html_pages/: test_home.html  test_page.html
